# vfx-ops-toolkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.yaml  pyproject.toml  toolkit.yaml
.github/workflows/: ci.yml
data/: tracking_db.json
docs/: architecture.md
docs/pm/: milestones.md  requirements.md  risks.md
docs/training/: quickstart.md
scripts/: demo.ps1  make_demo_frames.py
tests/: test_cli.py  test_config.py  test_json_tracker.py  test_logging_utils.py  test_monitoring.py  test_publish_manifest.py  test_publishing.py  test_tracking_factory.py  test_validation.py
toolkit/: cli.py  config.py  logging_utils.py  monitoring.py  publishing.py  validation.py
toolkit/tracking/: __init__.py  base.py  factory.py  json_tracker.py
